# ETH

./: .gitignore  .gitmodules  README.md  mars.txt  moons.txt
demos/week01/: CMakeLists.txt  hello.cpp  loop.cpp  prepost.cpp  swap.cpp  swapfixed.cpp
demos/week02/as/: functioncall.cpp
demos/week02/assert/: assert.cpp
demos/week02/cprepro/: hello.cpp  pre1.cpp  pre2.cpp  pre3.cpp
demos/week02/incguard/: grandfather.h
demos/week02/incguard/withguards/: child.cpp  grandfather.h
demos/week02/square/: Makefile  config.mk.example  main.cpp  simple.mk  simple_try-01.mk
demos/week02/square_lib/: main.cpp
demos/week02/square_lib/lib/: Makefile
demos/week03/: CMakeLists.txt  min.cpp  min.hpp  minmacro.cpp  trafficlight.cpp
demos/week03/square_cmake/: CMakeLists.txt
demos/week03/square_cmake_lib/: CMakeLists.txt
demos/week03/square_cmake_lib/lib/: CMakeLists.txt  square.cpp
demos/week04/: CMakeLists.txt  ctor_inilist_order.cpp  funcO_lambda.cpp  imcounting.cpp  point.cpp  point.hpp  point_main.cpp
demos/week04/IDGenerator/: CMakeLists.txt  IDGenerator.cpp  IDGenerator.hpp  main.cpp
demos/week05/: temporaries.cpp
demos/week05/Point/: CMakeLists.txt  point.cpp  point.hpp  point_main.cpp
demos/week05/Point/ADL/: point_adl.cpp
demos/week05/SArray/: CMakeLists.txt  sarray.cpp  sarray.hpp  sarray_main.cpp
demos/week05/SArrayT/: CMakeLists.txt  sarray.hpp  sarray_main.cpp
demos/week05/Traits/: CMakeLists.txt  average.hpp  average_main.cpp  min.hpp  min_main.cpp
exercises/: .gitignore
exercises/ex00/solutions/: fibonacci.cpp  gcd.cpp  merge_sort.cpp
exercises/ex01/solutions/: epsilon.cpp  hello_world.cpp  simpson.cpp
exercises/ex02/: plot_numpy.py
exercises/ex02/solutions/arrays/: Makefile  array_dynamic.cpp  array_static.cpp
exercises/ex02/solutions/simpson/: Makefile  convergence.gnuplot  main.cpp  plot_numpy.py
exercises/ex02/solutions/simpson/integrator/: Makefile  simpson.cpp  simpson.hpp
exercises/ex03/solutions/epsilon/: CMakeLists.txt  epsilon.cpp
exercises/ex03/solutions/simpson_cmake/: CMakeLists.txt  main.cpp
exercises/ex03/solutions/simpson_cmake/integrator/: CMakeLists.txt  simpson.cpp  simpson.hpp
exercises/ex03/solutions/trafficlight/: CMakeLists.txt  trafficlight.cpp
exercises/ex04/solutions/penna/: animal.hpp  genome.hpp
exercises/ex04/solutions/simpson/: CMakeLists.txt  main.cpp  simpson.hpp
exercises/ex04/solutions/z2_group/: CMakeLists.txt  z2_group.cpp
exercises/ex05/: simpson_traits_skeleton.cpp
